<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".JuegoPalabrasFragment"
    android:padding="16dp">

   <com.google.android.material.card.MaterialCardView
       android:id="@+id/card_view"
       android:layout_width="170dp"
       android:layout_height="230dp"
       android:layout_marginTop="50dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

         <ImageView
             android:id="@+id/image_word"
             android:layout_width="170dp"
             android:layout_height="170dp"
             android:scaleType="centerCrop"
             tools:srcCompat="@drawable/oso">

         </ImageView>

         <TextView
             android:id="@+id/tv_palabra"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:text="AquiPalabra"
             android:textAlignment="center"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:padding="16dp">
         </TextView>

      </LinearLayout>


   </com.google.android.material.card.MaterialCardView>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textFieldLayout"
       style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
       android:layout_marginTop="32dp"
       android:hint="@string/ordena_la_palabra"
       app:errorIconDrawable="@drawable/ic_error"
       app:layout_constraintTop_toBottomOf="@id/card_view"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
 <com.google.android.material.textfield.TextInputEditText
     android:id="@+id/textField"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:inputType="textPersonName|textNoSuggestions"
     android:maxLines="1"/>

   </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/paso"
       style="?attr/materialButtonOutlinedStyle"
       android:layout_width="90dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="72dp"
       android:layout_marginTop="40dp"
       android:text="@string/paso"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textFieldLayout" />


   <Button
       android:id="@+id/confirmar"
       android:layout_width="125dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="40dp"
       android:text="@string/confirmar"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textFieldLayout"
       app:layout_constraintStart_toEndOf="@id/paso"/>

   <TextView
       android:id="@+id/tvcontador_palabra"
       android:layout_width="30dp"
       android:layout_height="wrap_content"
       android:text="@string/contador_palabra"
       tools:text="3\n\nde\n\n10"
       android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
       android:layout_marginTop="100dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/card_view"
       app:layout_constraintTop_toTopOf="parent">

   </TextView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntos"
        tools:text="Puntos"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

   <TextView
       android:id="@+id/tvPuntos"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/puntos_valor"
       tools:text="5"
       android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
       android:layout_marginTop="140dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@id/card_view"
       app:layout_constraintEnd_toEndOf="parent">

   </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellowP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Firma"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>